<?xml version="1.0"?>
<package format="2">
  <name>burger_clean</name>
  <version>0.0.1</version>
  <description>The burger_clean package</description>
  <license>BSD</license>

  <maintainer email="b1512539@planet.kanazawa-it.ac.jp">HaruyaYuda</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>burger_arm_bringup</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>burger_arm_bringup</exec_depend>

</package>
